--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "mockjs": "^1.1.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
