--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.3",
+    "@antv/g2plot": "^2.4.15",
     "axios": "^1.7.2",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
@@ -19,6 +20,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "less": "^4.1.2"
   }
 }
