--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.3",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
     "vue": "^3.2.25",
