--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^4.2.3",
     "@antv/g2plot": "^2.4.15",
+    "ant-design-vue": "^4.2.3",
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
+    "flv.js": "^1.6.2",
     "less": "^4.2.0",
+    "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "less": "^4.1.2",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
-    "vue-tsc": "^0.29.8",
-    "less": "^4.1.2"
+    "vue-tsc": "^0.29.8"
   }
 }
