首页数据对接、视频对接

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^4.2.0",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
+    "screenfull": "^6.0.2",
     "vue": "^3.2.25",
     "vue-router": "^4.4.0"
   },
