--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "map-project",
   "private": true,
   "version": "1.0.0",
-  "homepage": "./",
+  "homepage": "https://pursues.github.io/github_map_project/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
