--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,5 +4,6 @@
     "module": "esnext",
     "moduleResolution": "node"
   },
-  "include": ["vite.config.ts"]
+  "allowSyntheticDefaultImports":true,
+  "types":["node"]
 }
